<resources>
    <string name="app_name" translatable="false">DeliveryFood</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="email">Email :</string>
    <string name="password">Password :</string>
    <string name="phone">Phone :</string>
    <string name="username">Username :</string>
    <string name="update">Update</string>
    <string name="delivery_to">"Delivery to "</string>
    <string name="submit">Submit</string>
    <string name="account">Account</string>
    <string name="my_order">My Order</string>
    <string name="saved_address">Saved Address</string>
    <string name="language">Language</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="popular_restaurant">Popular restaurant</string>
    <string name="view_location">View Location</string>
    <string name="delivery_within">Delivery within</string>
    <string name="minute">Minute</string>
    <string name="dollar">$</string>
    <string name="order">Order</string>
    <string name="title_activity_view_maps" translatable="false">map</string>
    <string name="Searchresult">Searching Result</string>
    <string name="SearchRestaurant">Search Restaurant</string>
    <string name="Your_Information">Your Information</string>
    <string name="Cancel">Cancel</string>
    <string name="input_your_email">You need to input your email</string>
    <string name="input_your_password">You need to input your password</string>
    <string name="input_your_username">You need to input your Username</string>
    <string name="input_your_phone">You need to input your phone</string>
    <string name="Registering_Please_Wait">Registering Please Wait...</string>
    <string name="email1">Email</string>
    <string name="password1">Password</string>
    <string name="phone1">Phone</string>
    <string name="username1">Username</string>
    <string name="login_first">You must login first</string>
    <string name="Logging_in">Logging in, Please wait...</string>
    <string name="Data_Successfully_Updated">Data Successfully Updated</string>
    <string name="You_have_been_order">You have been order</string>
    <string name="Restaurant_Information">Restaurant Information</string>
    <string name="Speak_something">Speak something</string>
    <string name="share_food_photo">Share Food Photo</string>
</resources>
